created basic REST operations for Student identity

--- a/backend/unimanagement/src/main/resources/application.properties
+++ b/backend/unimanagement/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=unimanagement
+#enter the url where db is situated
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/unimanagement
+#enter username and password
+spring.datasource.username = user1
+spring.datasource.password = testpassword
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#specify the port on which the application should run. Default value is 8080
+# server.port=9191
